--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "1.0.0",
     "convex": "^1.16.4",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.0",
     "jotai": "^2.10.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
